--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -20,7 +20,7 @@ sites:
   - name: CANNAFLEX
     url: https://cannaflex.ma
   - name: CANNAFLEX-PHARMACIE
-    url: https://cannaflexpharmacie.com
+    url: https://cannaflexpharmacie.comm
  # - name: AnimeChan
  #   url: https://anichan.kadantte.moe
  # - name: AnimeChan
