--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,8 +5,8 @@ repo: candy-up # The name of this repository
 sites:
   - name: Kadantte
     url: https://kadantte.moe
-#  - name: Why-inside.me
-#    url: https://s1.why-inside.me/u/y8A3ka.png
+  - name: Why-inside.me
+  url: https://cdn.why-inside.me
 #  - name: LiDa <3
 #    url: https://LiDa.kadantte.repl.co
 #  - name: Lavalink
